integrated new feature in  modules